[gd_scene load_steps=19 format=3 uid="uid://b5bvxt1xvmqa7"]

[ext_resource type="Script" path="res://levels/Function/level_1.gd" id="1_2ojt7"]
[ext_resource type="Texture2D" uid="uid://bsxq2qe7152ed" path="res://sprites/TilesetFloor.png" id="1_qqess"]
[ext_resource type="Texture2D" uid="uid://hfu7h4v3kbr4" path="res://sprites/TilesetWater.png" id="1_v0kda"]
[ext_resource type="Texture2D" uid="uid://ck2par2vjemj" path="res://sprites/TilesetNature.png" id="2_434o3"]
[ext_resource type="Texture2D" uid="uid://dbfvsevbw0886" path="res://sprites/table.png" id="3_oexn0"]
[ext_resource type="PackedScene" uid="uid://n1pbhaqvikdu" path="res://components/ide.tscn" id="5_pstxc"]
[ext_resource type="PackedScene" uid="uid://ciki7sjrkcanm" path="res://components/interactiveNpc.tscn" id="6_ruoia"]
[ext_resource type="Texture2D" uid="uid://daxlhd4mbegmd" path="res://sprites/SpriteSheet.png" id="7_tpiiu"]
[ext_resource type="Texture2D" uid="uid://ce8nlxqw6tyxx" path="res://sprites/ninjas/OldMan3.png" id="8_mo3rd"]
[ext_resource type="Texture2D" uid="uid://ckrrsbl85op3g" path="res://sprites/ninjas/yellowNinja.png" id="9_0co8p"]
[ext_resource type="Texture2D" uid="uid://c1mpe6oefoc7" path="res://sprites/ninjas/grayNinja.png" id="10_4xjpl"]
[ext_resource type="Texture2D" uid="uid://dd6oyh211dui5" path="res://sprites/ninjas/redNinja.png" id="11_756hv"]
[ext_resource type="Texture2D" uid="uid://b45vbri0u00bc" path="res://sprites/ninjas/blueNinja.png" id="12_10hhu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jhxch"]
texture = ExtResource("1_v0kda")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
24:1/0 = 0
25:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
11:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
24:4/0 = 0
0:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
0:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bouvj"]
texture = ExtResource("1_qqess")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
0:4/0 = 0
1:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
11:4/0 = 0
12:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
11:11/0 = 0
12:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
0:18/0 = 0
1:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
11:18/0 = 0
12:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
0:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3d025"]
texture = ExtResource("2_434o3")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
1:2/0 = 0
2:2/0 = 0
5:2/0 = 0
6:2/0 = 0
9:2/0 = 0
10:2/0 = 0
13:2/0 = 0
14:2/0 = 0
17:2/0 = 0
18:2/0 = 0
21:2/0 = 0
22:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
1:5/0 = 0
2:5/0 = 0
5:5/0 = 0
6:5/0 = 0
9:5/0 = 0
10:5/0 = 0
13:5/0 = 0
14:5/0 = 0
17:5/0 = 0
18:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
13:8/0 = 0
14:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
21:10/0 = 0
22:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
12:11/0 = 0
13:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
12:14/0 = 0
13:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
21:14/0 = 0
22:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
12:15/0 = 0
13:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mntmn"]
texture = ExtResource("3_oexn0")
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0

[sub_resource type="TileSet" id="TileSet_xvkng"]
sources/1 = SubResource("TileSetAtlasSource_bouvj")
sources/2 = SubResource("TileSetAtlasSource_3d025")
sources/3 = SubResource("TileSetAtlasSource_mntmn")
sources/0 = SubResource("TileSetAtlasSource_jhxch")

[node name="level_1" type="Node2D"]
script = ExtResource("1_2ojt7")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_xvkng")
format = 2
layer_0/name = "Capa 0"
layer_0/tile_data = PackedInt32Array(851968, 196609, 12, 851969, 1, 9, 851970, 65537, 9, 851971, 131073, 9, 851972, 196609, 12, 851973, 196609, 11, 851974, 196609, 11, 851975, 196609, 11, 851976, 0, 6, 851977, 65536, 6, 851978, 65536, 6, 851979, 65536, 6, 851980, 65536, 6, 851981, 65536, 6, 851982, 65536, 6, 851983, 65536, 6, 851984, 65536, 6, 851985, 131072, 6, 851986, 1, 12, 851987, 1, 12, 851988, 196609, 12, 851989, 196609, 12, 851990, 196609, 12, 851991, 196609, 12, 851992, 196609, 12, 786456, 196609, 12, 720920, 196609, 12, 655384, 1, 12, 589848, 1, 12, 524312, 196609, 12, 458776, 196609, 12, 393240, 196609, 12, 327704, 196609, 12, 327703, 196609, 12, 262167, 196609, 12, 196631, 196609, 12, 131095, 196609, 12, 65559, 196609, 12, 65560, 196609, 12, 24, 196609, 12, 131096, 196609, 12, 196632, 196609, 12, 262168, 196609, 12, 0, 196609, 12, 1, 196609, 12, 2, 196609, 12, 3, 196609, 12, 4, 196609, 12, 5, 196609, 12, 6, 196609, 12, 7, 196609, 12, 8, 196609, 12, 9, 196609, 12, 10, 131073, 11, 11, 131073, 11, 12, 196609, 12, 13, 196609, 12, 14, 196609, 12, 19, 196609, 12, 20, 196609, 12, 21, 196609, 12, 22, 196609, 12, 23, 196609, 12, 18, 196609, 12, 17, 196609, 12, 16, 196609, 12, 15, 196609, 12, 65536, 196609, 12, 131072, 196609, 12, 196608, 196609, 12, 262144, 1, 7, 327680, 1, 8, 393216, 1, 8, 458752, 1, 8, 524288, 1, 8, 589824, 1, 8, 655360, 1, 9, 720896, 196609, 12, 786432, 196609, 12, 786433, 1, 8, 786434, 65537, 8, 786435, 131073, 8, 786436, 262145, 12, 786437, 1, 9, 786438, 65537, 9, 786439, 65537, 9, 786440, 65537, 9, 786441, 65537, 9, 720905, 65537, 8, 720906, 65537, 8, 720907, 65537, 8, 720908, 65537, 8, 720909, 65537, 8, 720910, 65537, 8, 720911, 65537, 8, 720912, 65537, 8, 720913, 65537, 8, 786450, 65537, 9, 786451, 65537, 9, 786452, 131073, 9, 786453, 196609, 12, 786454, 196609, 12, 786455, 196609, 12, 786449, 65537, 9, 786448, 65537, 9, 786447, 65537, 9, 786446, 65537, 9, 786445, 65537, 9, 786444, 65537, 9, 786443, 65537, 9, 786442, 65537, 9, 720900, 196609, 12, 720899, 131073, 7, 720898, 65537, 7, 720897, 1, 7, 720901, 1, 8, 720902, 65537, 8, 720903, 65537, 8, 720904, 65537, 8, 720914, 65537, 8, 720915, 65537, 8, 720916, 131073, 8, 720917, 196609, 12, 720918, 196609, 11, 720919, 196609, 12, 655376, 65537, 8, 655375, 65537, 8, 655374, 65537, 8, 655373, 65537, 8, 655372, 65537, 8, 655371, 65537, 8, 655370, 65537, 8, 655369, 65537, 8, 655368, 65537, 8, 655367, 65537, 8, 655366, 65537, 8, 655365, 1, 8, 655364, 196609, 12, 655363, 131073, 9, 655362, 65537, 9, 655361, 65537, 9, 655377, 65537, 8, 655378, 65537, 8, 655379, 65537, 8, 655380, 131073, 8, 655381, 1, 12, 655382, 1, 12, 655383, 1, 12, 589847, 196609, 12, 524311, 196609, 12, 458775, 196609, 12, 393239, 196609, 12, 262166, 196609, 12, 196630, 196609, 12, 131094, 1, 12, 65558, 196609, 12, 131093, 1, 12, 196629, 1, 12, 327702, 196609, 12, 393238, 196609, 12, 458774, 196609, 12, 524310, 196609, 12, 589846, 196609, 11, 589845, 196609, 12, 524309, 196609, 11, 458773, 1, 12, 393237, 196609, 12, 327701, 196609, 11, 262165, 196609, 11, 65557, 196609, 12, 65556, 196609, 12, 65555, 196609, 12, 65554, 196609, 12, 65553, 196609, 12, 65552, 196609, 12, 65551, 196609, 12, 65550, 196609, 12, 65549, 1, 12, 65548, 131073, 11, 65547, 131073, 11, 65546, 262145, 12, 65545, 196609, 12, 65544, 196609, 12, 65543, 1, 12, 65542, 262145, 12, 65541, 262145, 12, 65540, 262145, 12, 65539, 196609, 11, 65538, 1, 12, 65537, 1, 12, 131073, 196609, 11, 131074, 196609, 12, 131075, 196609, 11, 131076, 131073, 11, 196613, 1, 12, 196614, 1, 12, 196615, 131073, 11, 196616, 131073, 11, 196617, 196609, 12, 196618, 262145, 12, 196619, 262145, 12, 196620, 262145, 12, 196621, 196609, 12, 196622, 1, 12, 196623, 196609, 11, 196624, 196609, 11, 131089, 196609, 11, 131090, 196609, 11, 131091, 196609, 12, 131092, 196609, 12, 131088, 196609, 12, 131087, 196609, 11, 131086, 1, 12, 131085, 1, 12, 131084, 196609, 12, 131083, 131073, 11, 131082, 131073, 11, 131081, 196609, 12, 131080, 196609, 12, 131079, 196609, 12, 131078, 262145, 12, 131077, 196609, 12, 196611, 131073, 11, 196610, 131073, 11, 196609, 196609, 11, 196612, 1, 12, 196625, 196609, 11, 196626, 196609, 11, 196627, 196609, 12, 196628, 196609, 12, 262164, 131073, 7, 327700, 131073, 8, 393236, 131073, 8, 458772, 131073, 8, 524308, 131073, 8, 589844, 131073, 8, 589843, 65537, 8, 589842, 65537, 8, 589841, 65537, 8, 589840, 65537, 8, 589839, 65537, 8, 589838, 65537, 8, 589837, 65537, 8, 589836, 65537, 8, 589835, 65537, 8, 589834, 65537, 8, 589833, 65537, 8, 589832, 65537, 8, 589831, 65537, 8, 589830, 65537, 8, 589829, 1, 8, 589828, 196609, 11, 589827, 131073, 8, 589826, 65537, 8, 589825, 65537, 8, 524289, 65537, 8, 458753, 65537, 8, 393217, 65537, 8, 327681, 65537, 8, 262145, 65537, 7, 262146, 65537, 7, 262147, 131073, 7, 262148, 196609, 11, 262149, 1, 7, 262150, 65537, 7, 262151, 65537, 7, 262152, 65537, 7, 262153, 65537, 7, 262154, 65537, 7, 262155, 65537, 7, 262156, 65537, 7, 262157, 65537, 7, 262158, 65537, 7, 262159, 65537, 7, 262160, 65537, 7, 262161, 65537, 7, 262162, 65537, 7, 262163, 65537, 7, 327682, 65537, 8, 393218, 65537, 8, 458754, 65537, 8, 524290, 65537, 8, 393219, 131073, 8, 327683, 131073, 8, 327684, 131073, 11, 393220, 196609, 12, 458756, 131073, 12, 524292, 1, 12, 524291, 131073, 8, 458755, 131073, 8, 327685, 1, 8, 327686, 65537, 8, 327687, 65537, 8, 327688, 65537, 8, 327689, 65537, 8, 327690, 65537, 8, 327691, 65537, 8, 327692, 65537, 8, 327693, 65537, 8, 327694, 65537, 8, 327695, 65537, 8, 327696, 65537, 8, 327697, 65537, 8, 327698, 65537, 8, 327699, 65537, 8, 393234, 65537, 8, 393233, 65537, 8, 393232, 65537, 8, 393231, 65537, 8, 458766, 65537, 8, 458765, 65537, 8, 458764, 65537, 8, 458763, 65537, 8, 458762, 65537, 8, 458761, 65537, 8, 458760, 65537, 8, 458759, 65537, 8, 458758, 65537, 8, 458757, 1, 8, 393221, 1, 8, 393222, 65537, 8, 393223, 65537, 8, 393224, 65537, 8, 393225, 65537, 8, 393226, 65537, 8, 393227, 65537, 8, 393228, 65537, 8, 393229, 65537, 8, 393230, 65537, 8, 393235, 65537, 8, 458768, 65537, 8, 458767, 65537, 8, 524299, 65537, 8, 524298, 65537, 8, 524297, 65537, 8, 524296, 65537, 8, 524295, 65537, 8, 524294, 65537, 8, 524293, 1, 8, 524300, 65537, 8, 524301, 65537, 8, 524302, 65537, 8, 524303, 65537, 8, 524304, 65537, 8, 524305, 65537, 8, 524306, 65537, 8, 458770, 65537, 8, 458771, 65537, 8, 524307, 65537, 8, 458769, 65537, 8)
layer_1/name = "Capa 1"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(0, 917506, 1, 1, 983042, 1, 4, 917506, 1, 5, 983042, 1, 8, 917506, 1, 9, 983042, 1, 12, 917506, 1, 13, 983042, 1, 16, 917506, 1, 17, 983042, 1, 20, 917506, 1, 21, 983042, 1, 24, 917506, 1, 524294, 720899, 10, 589830, 720899, 11, 524295, 786435, 10, 589831, 786435, 11, 524296, 851971, 10, 589832, 851971, 11, 524301, 1179651, 10, 589837, 1179651, 11, 524302, 1245187, 10, 589838, 1245187, 11, 524303, 1310723, 10, 589839, 1310723, 11, 524304, 1376259, 10, 589840, 1376259, 11, 458775, 0, 6, 524311, 0, 7, 589847, 0, 8, 458776, 65536, 6, 524312, 65536, 7, 589848, 65536, 8)
layer_2/name = "Capa 2"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(1, 786434, 3, 65537, 786434, 4, 2, 851970, 3, 65538, 851970, 4, 3, 917506, 3, 65539, 917506, 4, 4, 983042, 3, 65540, 983042, 4, 5, 786434, 3, 65541, 786434, 4, 6, 851970, 3, 65542, 851970, 4, 7, 917506, 3, 65543, 917506, 4, 8, 983042, 3, 65544, 983042, 4, 9, 786434, 3, 65545, 786434, 4, 10, 851970, 3, 65546, 851970, 4, 11, 917506, 3, 65547, 917506, 4, 12, 983042, 3, 65548, 983042, 4, 13, 786434, 3, 65549, 786434, 4, 65550, 851970, 4, 65551, 917506, 4, 65552, 983042, 4, 17, 786434, 3, 65553, 786434, 4, 18, 851970, 3, 65554, 851970, 4, 19, 917506, 3, 65555, 917506, 4, 20, 983042, 3, 65556, 983042, 4, 21, 786434, 3, 65557, 786434, 4, 22, 851970, 3, 65558, 851970, 4, 23, 917506, 3, 65559, 917506, 4, 24, 983042, 3, 65560, 983042, 4, 0, 983042, 3, 65536, 983042, 4, 16, 983042, 3, 15, 917506, 3, 14, 851970, 3, 524297, 917507, 10, 589833, 917507, 11, 524298, 983043, 10, 589834, 983043, 11, 524299, 1048579, 10, 589835, 1048579, 11, 524300, 1114115, 10, 589836, 1114115, 11, 524304, 1441795, 10, 589840, 1441795, 11, 524305, 1507331, 10, 589841, 1507331, 11, 524306, 1572867, 10, 589842, 1572867, 11, 524307, 1638403, 10, 589843, 1638403, 11, 393240, 65538, 11, 655384, 65538, 11, 524310, 196610, 11, 589847, 393218, 11, 851985, 393218, 11, 851975, 262146, 10)
layer_3/name = "Capa 3"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 3
layer_3/tile_data = PackedInt32Array(65537, 327682, 9, 65543, 327682, 9, 65551, 327682, 9, 65557, 327682, 9, 131075, 262146, 10, 131089, 262146, 10, 196618, 524290, 10, 131095, 524290, 10, 327701, 262146, 10, 196629, 262146, 10, 786454, 65538, 11)

[node name="Player" parent="." instance=ExtResource("6_ruoia")]
position = Vector2(86, 216)

[node name="Sprite2D" parent="Player" index="1"]
texture = ExtResource("7_tpiiu")

[node name="Master" parent="." instance=ExtResource("6_ruoia")]
position = Vector2(41, 198)

[node name="Sprite2D" parent="Master" index="1"]
texture = ExtResource("8_mo3rd")

[node name="WhipMaster" parent="." instance=ExtResource("6_ruoia")]
position = Vector2(35, 78)

[node name="Sprite2D" parent="WhipMaster" index="1"]
texture = ExtResource("9_0co8p")

[node name="NinjakuMaster" parent="." instance=ExtResource("6_ruoia")]
position = Vector2(35, 103)

[node name="Sprite2D" parent="NinjakuMaster" index="1"]
texture = ExtResource("10_4xjpl")

[node name="katanaMaster" parent="." instance=ExtResource("6_ruoia")]
position = Vector2(35, 128)

[node name="Sprite2D" parent="katanaMaster" index="1"]
texture = ExtResource("11_756hv")

[node name="SaiMaster" parent="." instance=ExtResource("6_ruoia")]
position = Vector2(35, 155)

[node name="Sprite2D" parent="SaiMaster" index="1"]
texture = ExtResource("12_10hhu")

[node name="CollisionShape2D" parent="SaiMaster" index="3"]
position = Vector2(0, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(300.001, 2.08165e-12)
transform = Transform2D(1, 0, 0, 1, 300.001, 2.08165e-12)

[node name="IDE" parent="CanvasLayer" instance=ExtResource("5_pstxc")]
offset_left = -300.001
offset_right = -199.001

[editable path="Player"]
[editable path="Master"]
[editable path="WhipMaster"]
[editable path="NinjakuMaster"]
[editable path="katanaMaster"]
[editable path="SaiMaster"]
